--- a/week1/DL_Notebook1_1_lamyse.ipynb
+++ b/week1/DL_Notebook1_1_lamyse.ipynb
@@ -270,10 +270,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 19,
       "metadata": {
         "id": "X9uIpOS2zx7k",
-        "outputId": "77946f75-a0bf-423a-d873-1d70b78d1749",
+        "outputId": "643e691d-0e6d-4e25-c358-630683da8e4a",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -555,6 +555,114 @@
     {
       "cell_type": "markdown",
       "source": [
+        "# Nelson Housing Dataset and Building Model 1 and Model 2"
+      ],
+      "metadata": {
+        "id": "KpAQoilpJ_9J"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "\n",
+        "# Define the dataset (Use your actual Nelson dataset here)\n",
+        "x1 = np.array([55, 75, 55.5, 65, 55, 75, 1.5, 3, 1.75, 1, 3.1, 1.6])\n",
+        "x2 = np.array([51, 55.5, 49, 61.5, 45, 65, 4, 5, 0.65, 2, 2.3, 2])\n",
+        "y = np.array([250, 450, 300, 450, 385, 210, 380, 600, 450, 325, 424, 285])\n",
+        "\n",
+        "#  Normalize the data to scale between 0 and 1\n",
+        "x1_norm = (x1 - x1.min()) / (x1.max() - x1.min())\n",
+        "x2_norm = (x2 - x2.min()) / (x2.max() - x2.min())\n",
+        "y_norm = y / 1000\n"
+      ],
+      "metadata": {
+        "id": "N8gngJ8WJJ6X"
+      },
+      "execution_count": 20,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Model 1: Distance-Based Price Prediction\n",
+        "model1 = tf.keras.Sequential([\n",
+        "    keras.layers.Dense(units=1, input_shape=[1])\n",
+        "])\n",
+        "\n",
+        "# Compile the model with a lower learning rate\n",
+        "model1.compile(optimizer=tf.keras.optimizers.SGD(learning_rate=0.01), loss='mean_squared_error')\n",
+        "\n",
+        "# Train using the normalized X1\n",
+        "model1.fit(x1_norm, y_norm, epochs=500, verbose=0)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "yiJ55O1eJpjL",
+        "outputId": "2bb50717-d9c8-4085-eadb-90a2833396c4"
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.11/dist-packages/keras/src/layers/core/dense.py:87: UserWarning: Do not pass an `input_shape`/`input_dim` argument to a layer. When using Sequential models, prefer using an `Input(shape)` object as the first layer in the model instead.\n",
+            "  super().__init__(activity_regularizer=activity_regularizer, **kwargs)\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<keras.src.callbacks.history.History at 0x78be7d4d11d0>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 21
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Model 2: Size-Based Price Prediction\n",
+        "model2 = tf.keras.Sequential([\n",
+        "    keras.layers.Dense(units=1, input_shape=[1])\n",
+        "])\n",
+        "\n",
+        "# Compile the model with the same learning rate\n",
+        "model2.compile(optimizer=tf.keras.optimizers.SGD(learning_rate=0.01), loss='mean_squared_error')\n",
+        "\n",
+        "# Train using the normalized X2\n",
+        "model2.fit(x2_norm, y_norm, epochs=500, verbose=0)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "tSWzmqLsKfK4",
+        "outputId": "9e5cf3e3-5ead-43d4-85c3-61766b88b608"
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<keras.src.callbacks.history.History at 0x78be7c7df410>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 22
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "# Predict price on distance from downtown"
       ],
       "metadata": {
@@ -565,35 +673,39 @@
       "cell_type": "code",
       "source": [
         "\n",
-        "# Define new distances to predict prices for (in km)\n",
-        "new_distances = np.array([[10], [20], [30], [40], [50]])  # Multiple test cases\n",
+        "# Define new distances (normalize them before prediction)\n",
+        "new_distances = np.array([10, 20, 30, 40, 50])\n",
+        "new_distances_norm = (new_distances - x1.min()) / (x1.max() - x1.min())\n",
         "\n",
-        "# Predict prices using the trained model1 (distance only)\n",
-        "pred_prices_x1 = model.predict(new_distances)\n",
+        "# Predict using model1\n",
+        "pred_prices_x1 = model1.predict(new_distances_norm) * 1000\n",
         "\n",
-        "# Display predictions\n",
-        "for i, dist in enumerate(new_distances.flatten()):\n",
-        "    print(f\"Predicted price for an apartment {dist} km from downtown: ${pred_prices_x1[i][0] * 1000:.2f}\")\n"
+        "# Display results\n",
+        "print(\"\\nPredictions based on Distance from Downtown:\")\n",
+        "for i, dist in enumerate(new_distances):\n",
+        "    print(f\"Predicted price for an apartment {dist} km from downtown: ${pred_prices_x1[i][0]:.2f}\")\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "LXBm5Ol8GeMF",
-        "outputId": "96a5b1b5-a3d7-4a77-c1a9-0bdee24dca47"
+        "outputId": "4f728509-67ab-41ae-faab-cf1e6ac0275f"
       },
-      "execution_count": 17,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 94ms/step\n",
-            "Predicted price for an apartment 10 km from downtown: $66133.50\n",
-            "Predicted price for an apartment 20 km from downtown: $118597.40\n",
-            "Predicted price for an apartment 30 km from downtown: $171061.28\n",
-            "Predicted price for an apartment 40 km from downtown: $223525.18\n",
-            "Predicted price for an apartment 50 km from downtown: $275989.07\n"
+            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 55ms/step\n",
+            "\n",
+            "Predictions based on Distance from Downtown:\n",
+            "Predicted price for an apartment 10 km from downtown: $317.05\n",
+            "Predicted price for an apartment 20 km from downtown: $335.90\n",
+            "Predicted price for an apartment 30 km from downtown: $354.76\n",
+            "Predicted price for an apartment 40 km from downtown: $373.61\n",
+            "Predicted price for an apartment 50 km from downtown: $392.46\n"
           ]
         }
       ]
@@ -610,22 +722,168 @@
     {
       "cell_type": "code",
       "source": [
-        "# Define new apartment sizes to predict prices for (in square feet)\n",
-        "new_sizes = np.array([[500], [750], [1000], [1250], [1500]])\n",
+        "# Define new apartment sizes (normalize them before prediction)\n",
+        "new_sizes = np.array([500, 750, 1000, 1250, 1500])\n",
+        "new_sizes_norm = (new_sizes - x2.min()) / (x2.max() - x2.min())\n",
         "\n",
-        "# Predict prices using the trained model2\n",
-        "pred_prices_x2 = model.predict(new_sizes)\n",
+        "# Predict using model2\n",
+        "pred_prices_x2 = model2.predict(new_sizes_norm) * 1000\n",
         "\n",
-        "# Display predictions\n",
-        "for i, size in enumerate(new_sizes.flatten()):\n",
-        "    print(f\"Predicted price for an apartment of {size} sq. ft.: ${pred_prices_x2[i][0] * 1000:.2f}\")\n"
+        "# Display results\n",
+        "print(\"\\nPredictions based on Apartment Size:\")\n",
+        "for i, size in enumerate(new_sizes):\n",
+        "    print(f\"Predicted price for an apartment of {size} sq. ft.: ${pred_prices_x2[i][0]:.2f}\")\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "EJxHVxVrHEgk",
-        "outputId": "a4006b35-81ca-4c4a-8546-158766ba967f"
+        "outputId": "50b399e0-ac06-455c-a2b6-3b7d7330a8cc"
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 54ms/step\n",
+            "\n",
+            "Predictions based on Apartment Size:\n",
+            "Predicted price for an apartment of 500 sq. ft.: $610.57\n",
+            "Predicted price for an apartment of 750 sq. ft.: $739.38\n",
+            "Predicted price for an apartment of 1000 sq. ft.: $868.19\n",
+            "Predicted price for an apartment of 1250 sq. ft.: $997.00\n",
+            "Predicted price for an apartment of 1500 sq. ft.: $1125.81\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Build & Train a Model That Uses Both Features"
+      ],
+      "metadata": {
+        "id": "CYop9Z6jLZk6"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "import tensorflow as tf\n",
+        "from tensorflow import keras\n",
+        "import matplotlib.pyplot as plt\n",
+        "\n",
+        "# Define the dataset\n",
+        "y = np.array([55, 51, 60, 75, 55.5, 49, 65, 61.5, 55, 45, 75, 65])\n",
+        "x1 = np.array([1.5, 3, 1.75, 1, 3.1, 1.6, 2.3, 2, 4, 5, 0.65, 2])\n",
+        "x2 = np.array([350, 450, 300, 450, 385, 210, 380, 600, 450, 325, 424, 285])\n",
+        "\n",
+        "# Normalize both inputs based on the training set\n",
+        "x1_min, x1_max = x1.min(), x1.max()\n",
+        "x2_min, x2_max = x2.min(), x2.max()\n",
+        "y_min, y_max = y.min(), y.max()\n",
+        "\n",
+        "x1_norm = (x1 - x1_min) / (x1_max - x1_min)\n",
+        "x2_norm = (x2 - x2_min) / (x2_max - x2_min)\n",
+        "y_norm = (y - y_min) / (y_max - y_min)\n",
+        "\n",
+        "# Combine X1 and X2 into a single input array\n",
+        "X_combined = np.column_stack((x1_norm, x2_norm))\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "n3hiB6pWLd3M"
+      },
+      "execution_count": 16,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#  Create a model with 2 input features (distance and size)\n",
+        "model_combined = tf.keras.Sequential([\n",
+        "    keras.layers.Dense(units=16, activation=\"relu\", input_shape=[2]),\n",
+        "    keras.layers.BatchNormalization(),  # Helps with stable training\n",
+        "    keras.layers.Dense(units=8, activation=\"relu\"),\n",
+        "    keras.layers.Dense(units=1)\n",
+        "])\n",
+        "\n",
+        "# Compile the model using Adam optimizer and mean squared error loss\n",
+        "model_combined.compile(optimizer=tf.keras.optimizers.Adam(learning_rate=0.01), loss='mean_squared_error')\n",
+        "\n",
+        "# Train the model with increased epochs\n",
+        "model_combined.fit(X_combined, y_norm, epochs=5000, verbose=0)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ZDrDVhw1LoaW",
+        "outputId": "b4547060-91ec-415b-877a-1ed371468a3e"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<keras.src.callbacks.history.History at 0x7f07f05ee510>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 17
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Predict Prices Using Both Distance & Size"
+      ],
+      "metadata": {
+        "id": "402_Ys_WL2WS"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Define new test apartments (distance & size)\n",
+        "new_apartments = np.array([\n",
+        "    [10, 500],\n",
+        "    [20, 750],\n",
+        "    [30, 1000],\n",
+        "    [40, 1250],\n",
+        "    [50, 1500]\n",
+        "])\n",
+        "\n",
+        "# Normalize new test values correctly based on training data\n",
+        "new_apartments[:, 0] = (new_apartments[:, 0] - x1_min) / (x1_max - x1_min)\n",
+        "new_apartments[:, 1] = (new_apartments[:, 1] - x2_min) / (x2_max - x2_min)\n",
+        "\n",
+        "# Predict prices using the trained model\n",
+        "pred_prices_combined = model_combined.predict(new_apartments)\n",
+        "\n",
+        "# Convert back to original scale\n",
+        "pred_prices_combined = pred_prices_combined * (y_max - y_min) + y_min\n",
+        "\n",
+        "# Display predictions with correctly formatted values\n",
+        "print(\"\\nPredictions using both Distance & Size:\")\n",
+        "for i, (dist, size) in enumerate(new_apartments):\n",
+        "    dist_actual = dist * (x1_max - x1_min) + x1_min\n",
+        "    size_actual = size * (x2_max - x2_min) + x2_min\n",
+        "\n",
+        "    print(f\"Predicted price for an apartment {dist_actual:.2f} km from downtown & {size_actual:.2f} sq. ft.: ${pred_prices_combined[i][0]:.2f}\")\n",
+        "    print(f\"Predicted price for an apartment {dist_actual:.2f} km from downtown & {size_actual:.2f} sq. ft.: ${pred_prices_combined[i][0]:.2f}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "dwzmEZcWLuKv",
+        "outputId": "50f9660b-baee-4ab6-f237-590a75255ee6"
       },
       "execution_count": 18,
       "outputs": [
@@ -633,12 +891,19 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 45ms/step\n",
-            "Predicted price for an apartment of 500 sq. ft.: $2636864.26\n",
-            "Predicted price for an apartment of 750 sq. ft.: $3948461.67\n",
-            "Predicted price for an apartment of 1000 sq. ft.: $5260058.59\n",
-            "Predicted price for an apartment of 1250 sq. ft.: $6571656.25\n",
-            "Predicted price for an apartment of 1500 sq. ft.: $7883253.42\n"
+            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 140ms/step\n",
+            "\n",
+            "Predictions using both Distance & Size:\n",
+            "Predicted price for an apartment 9.35 km from downtown & 210.00 sq. ft.: $18.02\n",
+            "Predicted price for an apartment 9.35 km from downtown & 210.00 sq. ft.: $18.02\n",
+            "Predicted price for an apartment 18.05 km from downtown & 600.00 sq. ft.: $9.97\n",
+            "Predicted price for an apartment 18.05 km from downtown & 600.00 sq. ft.: $9.97\n",
+            "Predicted price for an apartment 26.75 km from downtown & 990.00 sq. ft.: $1.93\n",
+            "Predicted price for an apartment 26.75 km from downtown & 990.00 sq. ft.: $1.93\n",
+            "Predicted price for an apartment 39.80 km from downtown & 990.00 sq. ft.: $-53.75\n",
+            "Predicted price for an apartment 39.80 km from downtown & 990.00 sq. ft.: $-53.75\n",
+            "Predicted price for an apartment 48.50 km from downtown & 1380.00 sq. ft.: $-61.79\n",
+            "Predicted price for an apartment 48.50 km from downtown & 1380.00 sq. ft.: $-61.79\n"
           ]
         }
       ]
