--- a/week1/DL_Notebook1_1_lamyse.ipynb
+++ b/week1/DL_Notebook1_1_lamyse.ipynb
@@ -853,13 +853,13 @@
         "# Define new test apartments (distance & size)\n",
         "new_apartments = np.array([\n",
         "    [10, 500],\n",
-        "    [20, 750],\n",
-        "    [30, 1000],\n",
-        "    [40, 1250],\n",
-        "    [50, 1500]\n",
+        "    [15, 750],\n",
+        "    [17, 1000],\n",
+        "    [12, 1250],\n",
+        "    [11, 1500]\n",
         "])\n",
         "\n",
-        "# Normalize new test values correctly based on training data\n",
+        "# Normalize values\n",
         "new_apartments[:, 0] = (new_apartments[:, 0] - x1_min) / (x1_max - x1_min)\n",
         "new_apartments[:, 1] = (new_apartments[:, 1] - x2_min) / (x2_max - x2_min)\n",
         "\n",
@@ -869,41 +869,40 @@
         "# Convert back to original scale\n",
         "pred_prices_combined = pred_prices_combined * (y_max - y_min) + y_min\n",
         "\n",
-        "# Display predictions with correctly formatted values\n",
+        "# Display predictions\n",
         "print(\"\\nPredictions using both Distance & Size:\")\n",
         "for i, (dist, size) in enumerate(new_apartments):\n",
         "    dist_actual = dist * (x1_max - x1_min) + x1_min\n",
         "    size_actual = size * (x2_max - x2_min) + x2_min\n",
         "\n",
-        "    print(f\"Predicted price for an apartment {dist_actual:.2f} km from downtown & {size_actual:.2f} sq. ft.: ${pred_prices_combined[i][0]:.2f}\")\n",
-        "    print(f\"Predicted price for an apartment {dist_actual:.2f} km from downtown & {size_actual:.2f} sq. ft.: ${pred_prices_combined[i][0]:.2f}\")"
+        "    print(f\"Predicted price for an apartment {dist_actual:.2f} km from downtown & {size_actual:.2f} sq. ft.: ${pred_prices_combined[i][0]:.2f}\")\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "dwzmEZcWLuKv",
-        "outputId": "50f9660b-baee-4ab6-f237-590a75255ee6"
+        "outputId": "e22a39c1-a656-40da-b926-5d4bf8f8184d"
       },
-      "execution_count": 18,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 140ms/step\n",
+            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 55ms/step\n",
             "\n",
             "Predictions using both Distance & Size:\n",
             "Predicted price for an apartment 9.35 km from downtown & 210.00 sq. ft.: $18.02\n",
             "Predicted price for an apartment 9.35 km from downtown & 210.00 sq. ft.: $18.02\n",
-            "Predicted price for an apartment 18.05 km from downtown & 600.00 sq. ft.: $9.97\n",
-            "Predicted price for an apartment 18.05 km from downtown & 600.00 sq. ft.: $9.97\n",
-            "Predicted price for an apartment 26.75 km from downtown & 990.00 sq. ft.: $1.93\n",
-            "Predicted price for an apartment 26.75 km from downtown & 990.00 sq. ft.: $1.93\n",
-            "Predicted price for an apartment 39.80 km from downtown & 990.00 sq. ft.: $-53.75\n",
-            "Predicted price for an apartment 39.80 km from downtown & 990.00 sq. ft.: $-53.75\n",
-            "Predicted price for an apartment 48.50 km from downtown & 1380.00 sq. ft.: $-61.79\n",
-            "Predicted price for an apartment 48.50 km from downtown & 1380.00 sq. ft.: $-61.79\n"
+            "Predicted price for an apartment 13.70 km from downtown & 600.00 sq. ft.: $28.53\n",
+            "Predicted price for an apartment 13.70 km from downtown & 600.00 sq. ft.: $28.53\n",
+            "Predicted price for an apartment 13.70 km from downtown & 990.00 sq. ft.: $51.37\n",
+            "Predicted price for an apartment 13.70 km from downtown & 990.00 sq. ft.: $51.37\n",
+            "Predicted price for an apartment 9.35 km from downtown & 990.00 sq. ft.: $49.68\n",
+            "Predicted price for an apartment 9.35 km from downtown & 990.00 sq. ft.: $49.68\n",
+            "Predicted price for an apartment 9.35 km from downtown & 1380.00 sq. ft.: $25.50\n",
+            "Predicted price for an apartment 9.35 km from downtown & 1380.00 sq. ft.: $25.50\n"
           ]
         }
       ]
