--- a/week4/Graded_Notebook4_4_Lamyse.ipynb
+++ b/week4/Graded_Notebook4_4_Lamyse.ipynb
@@ -774,9 +774,12 @@
         "\n",
         "To improve generalization, I applied data augmentation (rotations, zoom, flips) and fine-tuned VGG16’s deeper layers with a low learning rate (0.0001). During training, I encountered a minor warning about \"input ran out of data\", but it had no impact on performance. I ensured proper integer division for steps, preventing further issues.\n",
         "\n",
-        "The model achieved a validation accuracy of 99.87%, far surpassing the 92% requirement, and a low loss of 0.0053, indicating highly confident predictions. This approach combined transfer learning, augmentation, and fine-tuning to create a robust and reliable model.\n",
         "\n",
-        "I did few predictions below and it predicted correctly!"
+        "The model achieved 99.87% validation accuracy and a 0.0053 loss, demonstrating high confidence in predictions. Training accuracy was also above 99%, confirming that the model generalized well without overfitting. The data augmentation techniques helped improve robustness.\n",
+        "\n",
+        "By combining transfer learning, augmentation, and fine-tuning, I successfully built a high-performing and reliable fruit classification model.\n",
+        "\n",
+        "To validate its performance, I tested the model on new images, and it made correct predictions every time!"
       ],
       "metadata": {
         "id": "0C2Y1yoNdaD7"
@@ -814,15 +817,15 @@
         "    fruit_classes = [\"fresh_apples\", \"fresh_banana\", \"fresh_oranges\",\n",
         "                     \"rotten_apples\", \"rotten_banana\", \"rotten_oranges\"]\n",
         "\n",
-        "    predicted_index = np.argmax(prediction)\n",
-        "    predicted_label = fruit_classes[predicted_index]\n",
+        "    predicted_label = fruit_classes[np.argmax(prediction)]\n",
+        "    return predicted_label\n",
         "\n",
-        "    print(\"Predicted Category:\", predicted_label)\n"
+        "\n"
       ],
       "metadata": {
         "id": "VHw84k2ZeHE8"
       },
-      "execution_count": 42,
+      "execution_count": 49,
       "outputs": []
     },
     {
@@ -834,12 +837,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 458
+          "height": 441
         },
         "id": "wmb2izJBeVL7",
-        "outputId": "ad901dc5-1253-42a0-899f-84659ea6bf99"
+        "outputId": "a23023ce-b56b-40ca-f496-33e0b4ae5e47"
       },
-      "execution_count": 43,
+      "execution_count": 50,
       "outputs": [
         {
           "output_type": "display_data",
@@ -855,9 +858,8 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 59ms/step\n",
-            "Predicted Category: rotten_banana\n",
-            "None\n"
+            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 53ms/step\n",
+            "rotten_banana\n"
           ]
         }
       ]
@@ -872,12 +874,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 407
+          "height": 390
         },
         "id": "OpmbVjwLjbml",
-        "outputId": "5d928472-8ee9-4791-bf5b-d1653ab98abb"
+        "outputId": "3393e52f-6641-4fa1-cdf7-8bc58dc9b4db"
       },
-      "execution_count": 44,
+      "execution_count": 51,
       "outputs": [
         {
           "output_type": "display_data",
@@ -894,8 +896,7 @@
           "name": "stdout",
           "text": [
             "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 49ms/step\n",
-            "Predicted Category: rotten_oranges\n",
-            "None\n"
+            "rotten_oranges\n"
           ]
         }
       ]
@@ -909,12 +910,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 458
+          "height": 441
         },
         "id": "2HBmCJk3kFuM",
-        "outputId": "e5d350b1-0dbd-4cf2-f5c1-f2b84bd877cf"
+        "outputId": "c299b073-0ad3-423d-c2ca-0d6f9d571c96"
       },
-      "execution_count": 45,
+      "execution_count": 52,
       "outputs": [
         {
           "output_type": "display_data",
@@ -930,9 +931,8 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 46ms/step\n",
-            "Predicted Category: fresh_apples\n",
-            "None\n"
+            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 45ms/step\n",
+            "fresh_apples\n"
           ]
         }
       ]
