--- a/week4/Graded_Notebook4_4_Lamyse.ipynb
+++ b/week4/Graded_Notebook4_4_Lamyse.ipynb
@@ -779,10 +779,19 @@
         "\n",
         "By combining transfer learning, augmentation, and fine-tuning, I successfully built a high-performing and reliable fruit classification model.\n",
         "\n",
-        "To validate its performance, I tested the model on new images, and it made correct predictions every time!"
+        "To validate its performance, I tested the model on new images from the internet and it made correct predictions every time!"
       ],
       "metadata": {
         "id": "0C2Y1yoNdaD7"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Using new Images from the internet to predict"
+      ],
+      "metadata": {
+        "id": "x6Ry4ls3vI6A"
       }
     },
     {
