--- a/week5/C1_W2_Lab_1_beyond_hello_world_lamyse.ipynb
+++ b/week5/C1_W2_Lab_1_beyond_hello_world_lamyse.ipynb
@@ -433,6 +433,29 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "print(test_labels[0])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "cY7Z5XzFLVTA",
+        "outputId": "7557d24b-877c-4be2-c87c-54fa0b35722b"
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "9\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "MdzqbQhRArzm"
@@ -449,7 +472,9 @@
         "id": "IEoXdvPLE3cD"
       },
       "source": [
-        "### Answer:\n"
+        "### Answer:t he output is a list of probabilities, each corresponds to one of the 10 possible clothing categories in the  dataset. The values represent how confident the model is that the test image belongs to each class. The highest probability indicates the predicted class. Running print(test_labels[0]) shows that the actual label is 9, which matches the highest probability in classifications[0], meaning the model correctly identified the image as an \"ankle boot.\"\n",
+        "\n",
+        "\n"
       ]
     },
     {
@@ -458,12 +483,13 @@
         "id": "uUs7eqr7uSvs"
       },
       "source": [
-        "### Question 1.2: What does this list represent? (Select one option)\n",
+        "### Question 1.2: What does this list represent? (#3 is correct)\n",
         "\n",
         "\n",
         "1.   It's 10 random meaningless values\n",
         "2.   It's the first 10 classifications that the computer made\n",
-        "3.   It's the probability that this item is each of the 10 classes\n"
+        "**3.   It's the probability that this item is each of the 10 classes**\n",
+        "**bold text**"
       ]
     },
     {
@@ -481,11 +507,11 @@
         "id": "CD4kC6TBu-69"
       },
       "source": [
-        "### Question 1.3: How do you know that this list tells you that the item is an ankle boot?\n",
+        "### Question 1.3: How do you know that this list tells you that the item is an ankle boot? ( correct one is #2)\n",
         "\n",
         "\n",
         "1.   There's not enough information to answer that question\n",
-        "2.   The 10th element on the list is the biggest, and the ankle boot is labelled 9\n",
+        "**2.   The 10th element on the list is the biggest, and the ankle boot is labelled 9**\n",
         "2.   The ankle boot is label 9, and there are 0->9 elements in the list\n"
       ]
     },
@@ -575,10 +601,20 @@
       "source": [
         "### Question 2.1: Increase to 1024 Neurons -- What's the impact?\n",
         "\n",
-        "1. Training takes longer, but is more accurate\n",
+        "**1. Training takes longer, but is more accurate**\n",
         "2. Training takes longer, but no impact on accuracy\n",
         "3. Training takes the same time, but is more accurate\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "Increasing the number of neurons allows the model to learn more complex patterns, which improves accuracy. However, it also increases computational cost, leading to longer training times."
+      ],
+      "metadata": {
+        "id": "g0RplVL6MM9f"
+      }
     },
     {
       "cell_type": "markdown",
@@ -666,6 +702,15 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "Without Flatten(), the model would give an an error bcuz the input images are 2D (28x28 matrices), but the dense layers expect 1D input. The Flatten() layer converts the 2D images into a 1D vector, making them compatible with the fully connected layers."
+      ],
+      "metadata": {
+        "id": "0SId7n_NMc92"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "VqoCR-ieSGDg"
       },
@@ -735,12 +780,88 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "## Trying with 5 Neurons"
+      ],
+      "metadata": {
+        "id": "wZDASW_0M-0-"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "mnist = tf.keras.datasets.mnist\n",
+        "\n",
+        "(training_images, training_labels) ,  (test_images, test_labels) = mnist.load_data()\n",
+        "\n",
+        "training_images = training_images/255.0\n",
+        "test_images = test_images/255.0\n",
+        "\n",
+        "model = tf.keras.models.Sequential([tf.keras.layers.Flatten(),\n",
+        "                                    tf.keras.layers.Dense(64, activation=tf.nn.relu),\n",
+        "                                    tf.keras.layers.Dense(5, activation=tf.nn.softmax) # Try experimenting with this layer\n",
+        "                                  ])\n",
+        "\n",
+        "model.compile(optimizer = 'adam',\n",
+        "              loss = 'sparse_categorical_crossentropy')\n",
+        "\n",
+        "model.fit(training_images, training_labels, epochs=5)\n",
+        "\n",
+        "model.evaluate(test_images, test_labels)\n",
+        "\n",
+        "classifications = model.predict(test_images)\n",
+        "\n",
+        "print(classifications[0])\n",
+        "print(test_labels[0])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "BGqQFef4M8Pf",
+        "outputId": "bb4a95a0-3211-4635-a7ba-48e40049ab77"
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 1/5\n",
+            "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m5s\u001b[0m 2ms/step - loss: nan\n",
+            "Epoch 2/5\n",
+            "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m5s\u001b[0m 2ms/step - loss: nan\n",
+            "Epoch 3/5\n",
+            "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m4s\u001b[0m 2ms/step - loss: nan\n",
+            "Epoch 4/5\n",
+            "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m6s\u001b[0m 2ms/step - loss: nan\n",
+            "Epoch 5/5\n",
+            "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m5s\u001b[0m 2ms/step - loss: nan\n",
+            "\u001b[1m313/313\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 3ms/step - loss: nan\n",
+            "\u001b[1m313/313\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 2ms/step\n",
+            "[nan nan nan nan nan]\n",
+            "7\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "7s9S7h8DE3cF"
       },
       "source": [
         "### Answer:\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The 10 output neurons correspond to the 10 categories in the Fashion MNIST dataset. If we reduce the number to 5, the model would no longer be able to correctly classify all clothing items, leading to incorrect predictions or an error when training on labels that exceed the number of output neurons."
+      ],
+      "metadata": {
+        "id": "lx05yrg5MtHn"
+      }
     },
     {
       "cell_type": "markdown",
@@ -821,6 +942,15 @@
       "source": [
         "### Answer:\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Adding more layers, such as 1024 or 2048 neurons, can improve accuracy by allowing the model to learn deeper features. However, this also increases the risk of overfitting, making the model perform well on training data but poorly on unseen data. It also increases training time significantly!"
+      ],
+      "metadata": {
+        "id": "KVAu7EOvNKlA"
+      }
     },
     {
       "cell_type": "markdown",
@@ -945,12 +1075,106 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "## Trying with 15 epochs"
+      ],
+      "metadata": {
+        "id": "MuOYfw-6NWYf"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "mnist = tf.keras.datasets.mnist\n",
+        "\n",
+        "(training_images, training_labels) ,  (test_images, test_labels) = mnist.load_data()\n",
+        "\n",
+        "training_images = training_images/255.0\n",
+        "test_images = test_images/255.0\n",
+        "\n",
+        "model = tf.keras.models.Sequential([tf.keras.layers.Flatten(),\n",
+        "                                    tf.keras.layers.Dense(128, activation=tf.nn.relu),\n",
+        "                                    tf.keras.layers.Dense(10, activation=tf.nn.softmax)])\n",
+        "\n",
+        "model.compile(optimizer = 'adam',\n",
+        "              loss = 'sparse_categorical_crossentropy')\n",
+        "\n",
+        "model.fit(training_images, training_labels, epochs=15) # Experiment with the number of epochs\n",
+        "\n",
+        "model.evaluate(test_images, test_labels)\n",
+        "\n",
+        "classifications = model.predict(test_images)\n",
+        "\n",
+        "print(classifications[34])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "usJgw3GwNZun",
+        "outputId": "750c783a-2a0b-4b86-b263-5355f0602a80"
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 1/15\n",
+            "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m5s\u001b[0m 2ms/step - loss: 0.4421\n",
+            "Epoch 2/15\n",
+            "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m5s\u001b[0m 2ms/step - loss: 0.1251\n",
+            "Epoch 3/15\n",
+            "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m4s\u001b[0m 2ms/step - loss: 0.0835\n",
+            "Epoch 4/15\n",
+            "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m4s\u001b[0m 2ms/step - loss: 0.0587\n",
+            "Epoch 5/15\n",
+            "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m5s\u001b[0m 2ms/step - loss: 0.0452\n",
+            "Epoch 6/15\n",
+            "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m5s\u001b[0m 2ms/step - loss: 0.0324\n",
+            "Epoch 7/15\n",
+            "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m5s\u001b[0m 2ms/step - loss: 0.0277\n",
+            "Epoch 8/15\n",
+            "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m5s\u001b[0m 2ms/step - loss: 0.0211\n",
+            "Epoch 9/15\n",
+            "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m4s\u001b[0m 2ms/step - loss: 0.0184\n",
+            "Epoch 10/15\n",
+            "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m5s\u001b[0m 2ms/step - loss: 0.0138\n",
+            "Epoch 11/15\n",
+            "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m4s\u001b[0m 2ms/step - loss: 0.0128\n",
+            "Epoch 12/15\n",
+            "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m5s\u001b[0m 3ms/step - loss: 0.0091\n",
+            "Epoch 13/15\n",
+            "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m4s\u001b[0m 2ms/step - loss: 0.0084\n",
+            "Epoch 14/15\n",
+            "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m5s\u001b[0m 2ms/step - loss: 0.0068\n",
+            "Epoch 15/15\n",
+            "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m5s\u001b[0m 2ms/step - loss: 0.0074\n",
+            "\u001b[1m313/313\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 2ms/step - loss: 0.1117\n",
+            "\u001b[1m313/313\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 2ms/step\n",
+            "[4.3326023e-13 1.7837429e-12 7.2771296e-09 1.1474268e-07 9.1155400e-21 1.4137354e-18 7.7266399e-22 9.9999988e-01 8.0860423e-11 1.6594756e-12]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "VSNRzC73E3cR"
       },
       "source": [
         "### Answer:\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "15 epochs: The model generally decreased in loss.(0.117)\n",
+        "30 epochs: The loss stopped  decreasing sometimes and even started increasing dreachi 0.145"
+      ],
+      "metadata": {
+        "id": "idtUoE_4N9N3"
+      }
     },
     {
       "cell_type": "markdown",
@@ -1024,6 +1248,15 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "Without normalization, the model struggles because the input pixel values range from 0 to 255 instead of being between 0 and 1. This makes training slower and less stable because large input values can cause unstable gradients."
+      ],
+      "metadata": {
+        "id": "91dhqouiOToI"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "E7W2PT66ZBHQ"
       },
@@ -1094,6 +1327,39 @@
       "source": [
         "### Answer:\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Using a callback function like this for example:\n"
+      ],
+      "metadata": {
+        "id": "mNenmy6COlsQ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class myCallback(tf.keras.callbacks.Callback):\n",
+        "  def on_epoch_end(self, epoch, logs={}):\n",
+        "    if logs.get('accuracy') >= 0.95:\n",
+        "      print(\"\\nReached 95% accuracy, stopping training!\")\n",
+        "      self.model.stop_training = True\n"
+      ],
+      "metadata": {
+        "id": "9H8vpyYMOvX7"
+      },
+      "execution_count": 21,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "This stops training once accuracy reaches the desired threshold, preventing unnecessary epochs and saving computation time."
+      ],
+      "metadata": {
+        "id": "B-B4hjg5O32m"
+      }
     }
   ],
   "metadata": {
