--- a/Week6/DL_Week6_Ex2_chapter10_dl_for_timeseries_i.ipynb
+++ b/Week6/DL_Week6_Ex2_chapter10_dl_for_timeseries_i.ipynb
@@ -34,13 +34,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "id": "csBXVX755njc",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "9b04f021-6ae1-4079-b484-df0787e77e42"
+        "outputId": "97e1b6c9-5059-4065-9033-a143481e310c"
       },
       "outputs": [
         {
@@ -98,7 +98,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 4,
       "metadata": {
         "id": "nb-8WlqX5njc"
       },
@@ -152,7 +152,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 5,
       "metadata": {
         "id": "vP55rlJq5njd"
       },
@@ -160,7 +160,6 @@
       "source": [
         "from tensorflow import keras\n",
         "from tensorflow.keras import layers\n",
-        "\n",
         "import numpy as np\n",
         "timesteps = 100\n",
         "input_features = 32\n",
@@ -198,7 +197,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 6,
       "metadata": {
         "id": "8JbeYPyq5nje"
       },
@@ -220,13 +219,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 7,
       "metadata": {
         "id": "bOZ-kEIa5nje",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "0d781f27-ca55-4aef-9fc2-0f8622000a5f"
+        "outputId": "a874bade-3995-435b-ee02-fe580d3ae46b"
       },
       "outputs": [
         {
@@ -256,13 +255,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 8,
       "metadata": {
         "id": "7sJRSycv5nje",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "5ab4546e-91fb-4081-8b29-0d4146f3f9a2"
+        "outputId": "306ce331-afd6-4b1f-a3a3-787ed21752da"
       },
       "outputs": [
         {
@@ -292,7 +291,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 9,
       "metadata": {
         "id": "ACrZKTER5nje"
       },
@@ -333,7 +332,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "id": "sFQO-MB65nje",
         "colab": {
@@ -506,9 +505,120 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "iBB7gO2T5njf"
+        "id": "iBB7gO2T5njf",
+        "outputId": "9cc67195-78e5-49c8-c061-efa3bc48c540",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 1/50\n",
+            "\u001b[1m819/819\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m251s\u001b[0m 299ms/step - loss: 56.4791 - mae: 5.7452 - val_loss: 21.0452 - val_mae: 3.6194\n",
+            "Epoch 2/50\n",
+            "\u001b[1m819/819\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m258s\u001b[0m 294ms/step - loss: 23.7852 - mae: 3.8563 - val_loss: 17.7771 - val_mae: 3.3013\n",
+            "Epoch 3/50\n",
+            "\u001b[1m819/819\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m246s\u001b[0m 300ms/step - loss: 23.3388 - mae: 3.8169 - val_loss: 19.3402 - val_mae: 3.4555\n",
+            "Epoch 4/50\n",
+            "\u001b[1m819/819\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m260s\u001b[0m 297ms/step - loss: 22.9988 - mae: 3.7983 - val_loss: 17.6210 - val_mae: 3.2871\n",
+            "Epoch 5/50\n",
+            "\u001b[1m819/819\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m258s\u001b[0m 293ms/step - loss: 22.6119 - mae: 3.7525 - val_loss: 17.0765 - val_mae: 3.2105\n",
+            "Epoch 6/50\n",
+            "\u001b[1m819/819\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m264s\u001b[0m 295ms/step - loss: 22.4251 - mae: 3.7366 - val_loss: 18.0137 - val_mae: 3.3435\n",
+            "Epoch 7/50\n",
+            "\u001b[1m819/819\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m243s\u001b[0m 296ms/step - loss: 22.0421 - mae: 3.7103 - val_loss: 18.6777 - val_mae: 3.4039\n",
+            "Epoch 8/50\n",
+            "\u001b[1m819/819\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m242s\u001b[0m 296ms/step - loss: 21.6022 - mae: 3.6762 - val_loss: 17.2323 - val_mae: 3.2215\n",
+            "Epoch 9/50\n",
+            "\u001b[1m819/819\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m246s\u001b[0m 299ms/step - loss: 21.3185 - mae: 3.6470 - val_loss: 16.7187 - val_mae: 3.1732\n",
+            "Epoch 10/50\n",
+            "\u001b[1m819/819\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m262s\u001b[0m 299ms/step - loss: 21.1452 - mae: 3.6270 - val_loss: 18.0213 - val_mae: 3.3125\n",
+            "Epoch 11/50\n",
+            "\u001b[1m819/819\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m264s\u001b[0m 302ms/step - loss: 20.9605 - mae: 3.6161 - val_loss: 18.2390 - val_mae: 3.3108\n",
+            "Epoch 12/50\n",
+            "\u001b[1m819/819\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m251s\u001b[0m 306ms/step - loss: 20.8561 - mae: 3.6028 - val_loss: 18.6780 - val_mae: 3.3665\n",
+            "Epoch 13/50\n",
+            "\u001b[1m819/819\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m247s\u001b[0m 301ms/step - loss: 20.7161 - mae: 3.5999 - val_loss: 18.8232 - val_mae: 3.3767\n",
+            "Epoch 14/50\n",
+            "\u001b[1m819/819\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m244s\u001b[0m 298ms/step - loss: 20.6233 - mae: 3.5853 - val_loss: 23.3186 - val_mae: 3.8155\n",
+            "Epoch 15/50\n",
+            "\u001b[1m819/819\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m246s\u001b[0m 300ms/step - loss: 20.5119 - mae: 3.5719 - val_loss: 17.5340 - val_mae: 3.2483\n",
+            "Epoch 16/50\n",
+            "\u001b[1m819/819\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m243s\u001b[0m 296ms/step - loss: 20.4233 - mae: 3.5682 - val_loss: 17.0049 - val_mae: 3.2128\n",
+            "Epoch 17/50\n",
+            "\u001b[1m819/819\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m242s\u001b[0m 296ms/step - loss: 20.2480 - mae: 3.5525 - val_loss: 17.9027 - val_mae: 3.3121\n",
+            "Epoch 18/50\n",
+            "\u001b[1m819/819\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m267s\u001b[0m 302ms/step - loss: 20.1035 - mae: 3.5394 - val_loss: 16.4895 - val_mae: 3.1480\n",
+            "Epoch 19/50\n",
+            "\u001b[1m819/819\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m246s\u001b[0m 300ms/step - loss: 20.1601 - mae: 3.5436 - val_loss: 19.8576 - val_mae: 3.4731\n",
+            "Epoch 20/50\n",
+            "\u001b[1m819/819\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m244s\u001b[0m 297ms/step - loss: 20.1285 - mae: 3.5416 - val_loss: 16.9840 - val_mae: 3.2106\n",
+            "Epoch 21/50\n",
+            "\u001b[1m819/819\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m244s\u001b[0m 298ms/step - loss: 19.9387 - mae: 3.5268 - val_loss: 17.5123 - val_mae: 3.2558\n",
+            "Epoch 22/50\n",
+            "\u001b[1m819/819\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m265s\u001b[0m 301ms/step - loss: 20.0255 - mae: 3.5314 - val_loss: 17.6291 - val_mae: 3.2648\n",
+            "Epoch 23/50\n",
+            "\u001b[1m819/819\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m241s\u001b[0m 295ms/step - loss: 19.8142 - mae: 3.5208 - val_loss: 17.0513 - val_mae: 3.2188\n",
+            "Epoch 24/50\n",
+            "\u001b[1m819/819\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m247s\u001b[0m 301ms/step - loss: 19.7779 - mae: 3.5141 - val_loss: 17.4627 - val_mae: 3.2606\n",
+            "Epoch 25/50\n",
+            "\u001b[1m819/819\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m259s\u001b[0m 298ms/step - loss: 19.6989 - mae: 3.5006 - val_loss: 19.7583 - val_mae: 3.4990\n",
+            "Epoch 26/50\n",
+            "\u001b[1m819/819\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m261s\u001b[0m 296ms/step - loss: 19.8135 - mae: 3.5155 - val_loss: 17.3013 - val_mae: 3.2323\n",
+            "Epoch 27/50\n",
+            "\u001b[1m819/819\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m246s\u001b[0m 301ms/step - loss: 19.6584 - mae: 3.4985 - val_loss: 18.0156 - val_mae: 3.2880\n",
+            "Epoch 28/50\n",
+            "\u001b[1m819/819\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m242s\u001b[0m 296ms/step - loss: 19.6008 - mae: 3.4938 - val_loss: 17.3479 - val_mae: 3.2429\n",
+            "Epoch 29/50\n",
+            "\u001b[1m819/819\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m244s\u001b[0m 298ms/step - loss: 19.5919 - mae: 3.4930 - val_loss: 17.5631 - val_mae: 3.2805\n",
+            "Epoch 30/50\n",
+            "\u001b[1m819/819\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m243s\u001b[0m 297ms/step - loss: 19.5810 - mae: 3.4903 - val_loss: 17.7914 - val_mae: 3.2851\n",
+            "Epoch 31/50\n",
+            "\u001b[1m819/819\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m240s\u001b[0m 293ms/step - loss: 19.5184 - mae: 3.4860 - val_loss: 16.9941 - val_mae: 3.2244\n",
+            "Epoch 32/50\n",
+            "\u001b[1m819/819\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m266s\u001b[0m 298ms/step - loss: 19.5157 - mae: 3.4872 - val_loss: 16.4571 - val_mae: 3.1535\n",
+            "Epoch 33/50\n",
+            "\u001b[1m819/819\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m264s\u001b[0m 300ms/step - loss: 19.3783 - mae: 3.4777 - val_loss: 17.3490 - val_mae: 3.2524\n",
+            "Epoch 34/50\n",
+            "\u001b[1m819/819\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m242s\u001b[0m 295ms/step - loss: 19.3252 - mae: 3.4720 - val_loss: 17.0273 - val_mae: 3.2042\n",
+            "Epoch 35/50\n",
+            "\u001b[1m819/819\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m247s\u001b[0m 302ms/step - loss: 19.3231 - mae: 3.4739 - val_loss: 17.1169 - val_mae: 3.2274\n",
+            "Epoch 36/50\n",
+            "\u001b[1m819/819\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m260s\u001b[0m 299ms/step - loss: 19.3979 - mae: 3.4792 - val_loss: 17.9059 - val_mae: 3.3331\n",
+            "Epoch 37/50\n",
+            "\u001b[1m819/819\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m240s\u001b[0m 293ms/step - loss: 19.4217 - mae: 3.4812 - val_loss: 17.8509 - val_mae: 3.3077\n",
+            "Epoch 38/50\n",
+            "\u001b[1m819/819\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m242s\u001b[0m 296ms/step - loss: 19.3238 - mae: 3.4672 - val_loss: 18.1779 - val_mae: 3.3280\n",
+            "Epoch 39/50\n",
+            "\u001b[1m819/819\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m243s\u001b[0m 296ms/step - loss: 19.2464 - mae: 3.4620 - val_loss: 16.5924 - val_mae: 3.1698\n",
+            "Epoch 40/50\n",
+            "\u001b[1m819/819\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m242s\u001b[0m 295ms/step - loss: 19.2336 - mae: 3.4620 - val_loss: 16.7071 - val_mae: 3.1885\n",
+            "Epoch 41/50\n",
+            "\u001b[1m819/819\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m240s\u001b[0m 293ms/step - loss: 19.1555 - mae: 3.4541 - val_loss: 17.0156 - val_mae: 3.2134\n",
+            "Epoch 42/50\n",
+            "\u001b[1m819/819\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m240s\u001b[0m 293ms/step - loss: 19.2380 - mae: 3.4624 - val_loss: 16.9511 - val_mae: 3.2087\n",
+            "Epoch 43/50\n",
+            "\u001b[1m819/819\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m241s\u001b[0m 293ms/step - loss: 19.0963 - mae: 3.4495 - val_loss: 17.3541 - val_mae: 3.2513\n",
+            "Epoch 44/50\n",
+            "\u001b[1m819/819\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m264s\u001b[0m 296ms/step - loss: 19.1337 - mae: 3.4508 - val_loss: 17.0799 - val_mae: 3.2244\n",
+            "Epoch 45/50\n",
+            "\u001b[1m819/819\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m260s\u001b[0m 293ms/step - loss: 19.0385 - mae: 3.4446 - val_loss: 16.6602 - val_mae: 3.1794\n",
+            "Epoch 46/50\n",
+            "\u001b[1m819/819\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m262s\u001b[0m 293ms/step - loss: 19.1182 - mae: 3.4490 - val_loss: 16.8101 - val_mae: 3.1937\n",
+            "Epoch 47/50\n",
+            "\u001b[1m819/819\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m262s\u001b[0m 294ms/step - loss: 19.0365 - mae: 3.4431 - val_loss: 16.1293 - val_mae: 3.1282\n",
+            "Epoch 48/50\n",
+            "\u001b[1m819/819\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m244s\u001b[0m 298ms/step - loss: 18.9896 - mae: 3.4404 - val_loss: 16.7229 - val_mae: 3.1848\n",
+            "Epoch 49/50\n",
+            "\u001b[1m819/819\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m247s\u001b[0m 301ms/step - loss: 18.9849 - mae: 3.4365 - val_loss: 16.1107 - val_mae: 3.1314\n",
+            "Epoch 50/50\n",
+            "\u001b[1m109/819\u001b[0m \u001b[32m━━\u001b[0m\u001b[37m━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[1m2:55\u001b[0m 247ms/step - loss: 18.9356 - mae: 3.4268"
+          ]
+        }
+      ],
       "source": [
         "inputs = keras.Input(shape=(sequence_length, raw_data.shape[-1]))\n",
         "x = layers.GRU(32, recurrent_dropout=0.5, return_sequences=True)(inputs)\n",
@@ -518,7 +628,7 @@
         "model = keras.Model(inputs, outputs)\n",
         "\n",
         "callbacks = [\n",
-        "    keras.callbacks.ModelCheckpoint(\"jena_stacked_gru_dropout.x\",\n",
+        "    keras.callbacks.ModelCheckpoint(\"jena_stacked_gru_dropout.keras\",\n",
         "                                    save_best_only=True)\n",
         "]\n",
         "model.compile(optimizer=\"rmsprop\", loss=\"mse\", metrics=[\"mae\"])\n",
@@ -527,7 +637,7 @@
         "                    validation_data=val_dataset,\n",
         "                    callbacks=callbacks)\n",
         "\n",
-        "model = keras.models.load_model(\"jena_stacked_gru_dropout.x\")\n",
+        "model = keras.models.load_model(\"jena_stacked_gru_dropout.keras\")\n",
         "print(f\"Test MAE: {model.evaluate(test_dataset)[1]:.2f}\")"
       ]
     },
@@ -551,11 +661,42 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
-        "id": "RDs_yJGg5njf"
+        "id": "RDs_yJGg5njf",
+        "outputId": "b7bdd2df-6e51-4ced-bfc7-dbc7b843c550",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 1/10\n",
+            "\u001b[1m819/819\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m142s\u001b[0m 169ms/step - loss: 109.4151 - mae: 8.4838 - val_loss: 57.7342 - val_mae: 6.1306\n",
+            "Epoch 2/10\n",
+            "\u001b[1m819/819\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m136s\u001b[0m 166ms/step - loss: 59.4063 - mae: 6.0730 - val_loss: 42.4590 - val_mae: 5.1656\n",
+            "Epoch 3/10\n",
+            "\u001b[1m819/819\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m136s\u001b[0m 166ms/step - loss: 49.1452 - mae: 5.4131 - val_loss: 35.6415 - val_mae: 4.6782\n",
+            "Epoch 4/10\n",
+            "\u001b[1m819/819\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m139s\u001b[0m 169ms/step - loss: 41.4281 - mae: 4.9114 - val_loss: 29.8749 - val_mae: 4.2427\n",
+            "Epoch 5/10\n",
+            "\u001b[1m819/819\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m138s\u001b[0m 168ms/step - loss: 35.4405 - mae: 4.5192 - val_loss: 26.6965 - val_mae: 4.0179\n",
+            "Epoch 6/10\n",
+            "\u001b[1m819/819\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m139s\u001b[0m 170ms/step - loss: 30.9284 - mae: 4.2270 - val_loss: 24.1940 - val_mae: 3.7863\n",
+            "Epoch 7/10\n",
+            "\u001b[1m819/819\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m138s\u001b[0m 168ms/step - loss: 27.6501 - mae: 4.0117 - val_loss: 23.7829 - val_mae: 3.8072\n",
+            "Epoch 8/10\n",
+            "\u001b[1m819/819\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m142s\u001b[0m 169ms/step - loss: 25.2994 - mae: 3.8613 - val_loss: 21.6911 - val_mae: 3.6349\n",
+            "Epoch 9/10\n",
+            "\u001b[1m819/819\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m143s\u001b[0m 170ms/step - loss: 23.7506 - mae: 3.7667 - val_loss: 20.3427 - val_mae: 3.4996\n",
+            "Epoch 10/10\n",
+            "\u001b[1m819/819\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m138s\u001b[0m 169ms/step - loss: 22.7002 - mae: 3.6932 - val_loss: 20.6221 - val_mae: 3.5534\n"
+          ]
+        }
+      ],
       "source": [
         "inputs = keras.Input(shape=(sequence_length, raw_data.shape[-1]))\n",
         "x = layers.Bidirectional(layers.LSTM(16))(inputs)\n",
