--- a/Week7/DL_Week_7_Notebook7_2.ipynb
+++ b/Week7/DL_Week_7_Notebook7_2.ipynb
@@ -266,6 +266,155 @@
         "print(\"\\nPadded Test Sequence: \")\n",
         "print(padded)"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Experimenting"
+      ],
+      "metadata": {
+        "id": "zTDhg25MEgDb"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "### Experimenting with different Tokenizer parameters\n",
+        "### Lower the num_words to limit vocabulary\n",
+        "### Change filters to keep some punctuation\n",
+        "### Keep original case with lower=False"
+      ],
+      "metadata": {
+        "id": "uqcAqaAuEpBE"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from tensorflow.keras.preprocessing.text import Tokenizer\n",
+        "from tensorflow.keras.preprocessing.sequence import pad_sequences\n",
+        "\n",
+        "# Updated corpus with more diverse sentences\n",
+        "sentences = [\n",
+        "    'dogs are amazing',\n",
+        "    'cats are sweet',\n",
+        "    'it is nice to have pets at home',\n",
+        "\n",
+        "]\n",
+        "\n",
+        "\n",
+        "tokenizer = Tokenizer(\n",
+        "    num_words=5,  # Limit to top 5 most frequent words\n",
+        "    oov_token=\"<UNKNOWN>\",  # Changed OOV token\n",
+        "    filters='!\"#$%&()*+,-./:;<=>?@[\\\\]^_`{|}~\\t\\n',  # Removed apostrophe from filters\n",
+        "    lower=False  # Preserve original case\n",
+        ")\n",
+        "\n",
+        "# Tokenize the input sentences\n",
+        "tokenizer.fit_on_texts(sentences)\n",
+        "\n",
+        "# Get the word index dictionary\n",
+        "word_index = tokenizer.word_index\n",
+        "print(\"\\nWord Index = \", word_index)\n",
+        "\n",
+        "# Generate list of token sequences\n",
+        "sequences = tokenizer.texts_to_sequences(sentences)\n",
+        "print(\"\\nSequences = \", sequences)\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "FElALAX-EjjZ",
+        "outputId": "15840332-5d45-42d3-ede0-091a4086b6cb"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "Word Index =  {'<UNKNOWN>': 1, 'are': 2, 'dogs': 3, 'amazing': 4, 'cats': 5, 'sweet': 6, 'it': 7, 'is': 8, 'nice': 9, 'to': 10, 'have': 11, 'pets': 12, 'at': 13, 'home': 14}\n",
+            "\n",
+            "Sequences =  [[3, 2, 4], [1, 2, 1], [1, 1, 1, 1, 1, 1, 1, 1]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Pad the sequences with custom parameters\n",
+        "### Use padding='post' to add zeros at the end instead of the beginning\n",
+        "### Use truncating='post' to keep the beginning of the sequence"
+      ],
+      "metadata": {
+        "id": "bUsP-eKXFXIq"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "padded = pad_sequences(\n",
+        "    sequences,\n",
+        "    maxlen=6,  # Specify a fixed length\n",
+        "    padding='post',  # Add padding at the end\n",
+        "    truncating='post'  # Truncate from the end if too long\n",
+        ")\n",
+        "print(\"\\nPadded Sequences:\")\n",
+        "print(padded)\n",
+        "\n",
+        "# Test with out-of-vocabulary words\n",
+        "test_data = [\n",
+        "    'tech is advancicing',\n",
+        "    'quantum computing is advancing'\n",
+        "]\n",
+        "\n",
+        "# Generate sequences for test data\n",
+        "test_seq = tokenizer.texts_to_sequences(test_data)\n",
+        "print(\"\\nTest Sequence = \", test_seq)\n",
+        "\n",
+        "# Pad test sequences\n",
+        "padded_test = pad_sequences(\n",
+        "    test_seq,\n",
+        "    maxlen=6,\n",
+        "    padding='post',\n",
+        "    truncating='post'\n",
+        ")\n",
+        "print(\"\\nPadded Test Sequence: \")\n",
+        "print(padded_test)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "O4vnoDeaFXk7",
+        "outputId": "aec5f565-df5c-431a-c8d7-40d0b866a4cd"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "Padded Sequences:\n",
+            "[[3 2 4 0 0 0]\n",
+            " [1 2 1 0 0 0]\n",
+            " [1 1 1 1 1 1]]\n",
+            "\n",
+            "Test Sequence =  [[1, 1, 1], [1, 1, 1, 1]]\n",
+            "\n",
+            "Padded Test Sequence: \n",
+            "[[1 1 1 0 0 0]\n",
+            " [1 1 1 1 0 0]]\n"
+          ]
+        }
+      ]
     }
   ],
   "metadata": {
